welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:3: error: type mismatch;
 found   : Unit
 required: Int
	if (speed < 60 ) { return 0 }
        ^